# bdiff

./: .cirrus.yml  BUILD.bazel  Makefile  WORKSPACE  constants.bzl  main.go
bazel/: BUILD.bazel  query.go  targets.go
changes/: BUILD.bazel  build_file.go  build_file_test.go
cmd/: BUILD.bazel  exec.go
filesystem/: BUILD.bazel  dir.go  dir_test.go  file.go  file_test.go
